# tax-api

./: .docker-compose.db.env  .pre-commit-config.yaml  .python-version  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 06f24c3125af_create_table_tax_rates.py  aebaaaa691ea_initial_migration.py
docs/: pull_request_template.md
docs/diagrams/: c4model_structurizr.dsl
src/: __init__.py  main.py  settings.py
src/application/controllers/: health_check_controller.py
src/application/dtos/: tax_dto.py
src/application/use_cases/: create_tax_use_case.py
src/domain/: tax_calculation.py
src/domain/exceptions/: tax_exceptions.py
src/domain/models/: base_model.py  tax.py  tax_rate.py
src/domain/shared_resources/: datetimes.py
src/infraestructure/: database.py  unit_of_work.py
src/infraestructure/repositories/: base_repository.py  tax_rate_repository.py
tests/application/controllers/: conftest.py  test_health_check_controller.py
tests/infraestructure/repositories/: conftest.py  test_tax_rate_repository.py
