[tool.poetry]
name = "tax-api"
version = "0.1.0"
description = "API que oferece serviços relacionados à tributação"
authors = ["Gabriel Ladeira <gabrielxladeira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version ="^0.115.8"}

[tool.poetry.group.test.dependencies]  
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
